@@ -1,0 +1,9 @@
+Title: Fixed sorting in duallist element (two lists with interchangable elements)
+Level: 1
+Component: wato
+Version: 1.2.4b8
+Date: 1391001637
+Class: fix
+
+This fix ensures that if elements are moved from one list to the other
+they are inserted at the correct alphanumerical index and not at the end.
