@@ -10,6 +10,7 @@
     * 0686 FIX: Fix replication with WATO if EC is enabled on master and disabled on slave
     * 0129 FIX: Fixed permission bug in "Edit user profile" dialog....
     * 0269 FIX: brocade_fcport: fixed problem on displaying check_parameters in WATO...
+    * 0271 FIX: Fixed sorting in duallist element (two lists with interchangable elements)...
 
 
 1.2.4b7:
